# GeomCpp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  a.out  test.cpp
Core/: Line.hpp  Point.hpp  Point_traits.hpp  TestingDivision.cpp  a.out  main.cpp  test_program  unit_tests.cpp
Examples/Line/: line_example_basic.cpp
Examples/Point/: CMakeLists.txt  point_example_basic.cpp
Traits/: Traits.hpp
Visualizer/: Visualizer.hpp
tests/: CMakeLists.txt  test_point.cpp
